<resources>
    <string name="app_name">Movie Review</string>
    <string name="watch_trailer">Watch trailer</string>
    <string name="mocked_movie_synopsis">The Fast and the Furious is a 2001 action film directed by Rob Cohen and written by Gary Scott Thompson and David Ayer. It is the first installment in the Fast and Furious franchise and stars Paul Walker, Vin Diesel, Michelle Rodriguez, Jordana Brewster, Rick Yune, Chad Lindberg, Johnny Strong, and Ted Levine. In the film…</string>
    <string name="synopsis_title">Synopsis</string>
    <string name="creators_title">Creators</string>
    <string name="creators_names" translatable="false">Amanda Lewis\nSamantha Vincent\nChris Morgan</string>
    <string name="movie_title">Fast And Furious</string>
    <string name="genres">Genres</string>
    <string name="generes_text" translatable="false">Sci-Fi and Fantasy, Action and Adventure, Drama, War and Politics</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="movies">Movies</string>
    <string name="favorites">Favorites</string>
    <string name="more">More</string>
    <string name="theme">Theme</string>
    <string name="theme_system_subtitle">Automatic</string>
    <string name="simplify_menu_icons_title">Menu icons navigation</string>
    <string name="default_menu_icons_sub_title">Always show description</string>

    <!-- Social -->
    <!-- Github -->
    <string name="github" translatable="false">Github</string>
    <string name="my_github_user" translatable="false">/PierreVieira</string>
    <string name="my_github_link" translatable="false">https://github.com/PierreVieira</string>
    <!-- Linkedin -->
    <string name="linkedin" translatable="false">LinkedIn</string>
    <string name="my_linkedin_user" translatable="false">/pierre-vieira</string>
    <string name="my_linkedin_link" translatable="false">https://linkedin.com/in/pierre-vieira</string>
    <!-- Youtube -->
    <string name="youtube" translatable="false">YouTube</string>
    <string name="my_youtube_use" translatable="false">/PierreVieira</string>
    <string name="my_youtube_link" translatable="false">https://youtube.com/channel/UCGF4Ag9zGp6newv-tkSkTcA</string>
    <!-- Facebook -->
    <string name="facebook" translatable="false">Facebook</string>
    <string name="my_facebook_user" translatable="false">/pierrevieira3612</string>
    <string name="my_facebook_link" translatable="false">https://www.facebook.com/pierrevieira3612</string>
    <!-- Instagram -->
    <string name="instagram" translatable="false">Instagram</string>
    <string name="my_instagram_user" translatable="false">\@pierrevieira36</string>
    <string name="my_instagram_link" translatable="false">https://www.instagram.com/pierrevieira36/</string>

    <!-- Months -->
    <string name="january">jan</string>
    <string name="february">feb</string>
    <string name="march">mar</string>
    <string name="april">apr</string>
    <string name="may">may</string>
    <string name="june">jun</string>
    <string name="july">jul</string>
    <string name="august">aug</string>
    <string name="september">sep</string>
    <string name="october">oct</string>
    <string name="november">nov</string>
    <string name="december">dec</string>

    <string name="cant_open_link">Sorry, we can\'t open this link</string>
    <string name="change_theme_color">Change Theme Color</string>
    <string name="ok" translatable="false">OK</string>
    <string name="cancel">Cancel</string>
    <string name="change_theme_color_description">Choose how the application should display colors</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="system_color">System Colors</string>
    <string name="settings">Settings</string>
    <string name="follow_my_social_networks">Follow my social networks</string>
    <string name="change_description_menu_icons">Change Description Menu Icons</string>
    <string name="change_menu_icons_description">Choose how the app should display navigation icons</string>
    <string name="always_show_menu_icons_description">Always show navigation icon texts (recommended)</string>
    <string name="always_show_menu_icons_description_list">Always show the text</string>
    <string name="show_only_selected_menu_icons_description">Show navigation icon texts only if the page is selected</string>
    <string name="show_only_selected_menu_icons_description_list">Show texts only in selected menu option</string>
    <string name="never_show_menu_icons_description">Never show navigation icon texts</string>
    <string name="the_most_popular">The most popular</string>
    <string name="trending_tv">Trending TV</string>

    <string name="movie_date">%s of %s, %s</string>
    <string name="cant_load">Sorry, we were unable to load this page. Please check your internet connection.</string>
</resources>