<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/trailer_container"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:layout_constraintBottom_toTopOf="@id/scroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/banner_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/image_overlay"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/fast_and_furious_image" />

            <ImageView
                android:padding="4dp"
                android:id="@+id/change_theme_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:contentDescription="@string/watch_trailer"
                app:srcCompat="?attr/change_theme_icon" />

            <ImageView
                android:id="@+id/play_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/watch_trailer"
                app:srcCompat="@drawable/ic_baseline_play_circle_filled" />

        </FrameLayout>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/trailer_container"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:id="@+id/movie_infos_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:fontFamily="@font/montserrat"
                    android:gravity="center"
                    android:textSize="@dimen/movie_title_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="@id/movie_infos_container"
                    app:layout_constraintStart_toStartOf="@id/movie_infos_container"
                    app:layout_constraintTop_toBottomOf="@id/banner_image"
                    android:text="@string/movie_title" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    android:layout_marginHorizontal="@dimen/card_horizontal_margin"
                    android:layout_marginBottom="@dimen/card_margin_bottom"
                    android:backgroundTint="@color/background_card"
                    >

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/card_padding"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/description_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/card_title_size"
                            android:layout_marginBottom="@dimen/text_title_card_margin_bottom"
                            android:text="@string/synopsis_title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/description_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/movie_synopsis" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    android:layout_marginHorizontal="@dimen/card_horizontal_margin"
                    android:layout_marginBottom="@dimen/card_margin_bottom"
                    android:backgroundTint="@color/background_card"
                    >

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/card_padding"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/creators_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/card_title_size"
                            android:layout_marginBottom="@dimen/text_title_card_margin_bottom"
                            android:text="@string/creators_title" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/creators_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/creators_names"
                            tools:text="Amanda Lewis\nSamantha Vincent\nChris Morgan"/>
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    android:layout_marginHorizontal="@dimen/card_horizontal_margin"
                    android:layout_marginBottom="@dimen/card_margin_bottom"
                    android:backgroundTint="@color/background_card"
                    >

                    <androidx.appcompat.widget.LinearLayoutCompat
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="@dimen/card_padding"
                        >

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/genres_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/card_title_size"
                            android:layout_marginBottom="@dimen/text_title_card_margin_bottom"
                            android:text="@string/genres" />

                        <androidx.appcompat.widget.AppCompatTextView
                            android:id="@+id/genres_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="start"
                            android:text="@string/generes_text" />
                    </androidx.appcompat.widget.LinearLayoutCompat>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>